--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.4.5"
   }
 }
-
